<resources>
    <string name="app_name">On a Mangé Pour Vous</string>
    <string name="Username">E-mail</string>
    <string name="Password">Password</string>
    <string name="PasswordAgain">Password Again</string>
    <string name="SignIn">SIGN IN</string>
    <string name="SignUp">SIGN UP</string>
    <string name="SignInFacebook">SIGN IN WITH FACEBOOK</string>
    <string name="SignInTwitter">SIGN IN WITH TWITTER</string>
    <string name="Or">OR</string>
    <string name="Help">Need Help?</string>
    <string name="CreateAccount">Create An Account</string>
    <string name="Email">Email</string>
    <string name="customer">Customer</string>
    <string name="restaurant">Restaurant</string>
    <string name="title_activity_main_menu">On a Mangé Pour Vous</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: </string>
    <string name="facebook_app_id">1873120622971112</string>
    <string name="searchByName">Search By Restaurant Name</string>

    <string name="loading">loading</string>

    loading


    <!-- Button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
</resources>
