<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:orientation="vertical"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/login_background"
    tools:context="com.ompv.amigos.myapplication.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginTop="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.50"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:layout_marginTop="35dp" >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="129dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/logo" />

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Username"
                android:textColor="#FFF"
                android:textColorHint="#FFF"/>
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:inputType="textPassword"
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password"
                android:textColor="#FFF"
                android:textColorHint="#FFF"/>

        </com.wrapp.floatlabelededittext.FloatLabeledEditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:paddingTop="20dp"

        android:layout_marginTop="25dp">

        <TextView
            android:id="@+id/signIn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/signin_background"
            android:gravity="center"
            android:text="@string/SignIn"
            android:textColor="#FFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/Or"
            android:textColor="@android:color/background_light"
            android:textColorLink="@android:color/background_light"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/signInFacebook"
            android:layout_width="match_parent"
            android:text="@string/SignInFacebook"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            />
        <com.google.android.gms.common.SignInButton
            android:id="@+id/signInGoogle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:paddingRight="30dp"
        android:paddingLeft="30dp">

        <TextView
            android:id="@+id/help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Help"
            android:layout_alignParentLeft="true"
            android:textColor="@android:color/background_light"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/createAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/CreateAccount"
            android:textColor="@android:color/background_light"
            android:textSize="14sp"
            android:textStyle="bold" />
    </RelativeLayout>


    </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>

