<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context="com.ompv.amigos.myapplication.LoginActivity"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="25dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="129dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/logo" />

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Username"
                android:textColor="#FFF"
                android:textColorHint="#FFF"/>
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>
        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Email"
                android:textColor="#FFF"
                android:textColorHint="#FFF"/>

        </com.wrapp.floatlabelededittext.FloatLabeledEditText>
        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:inputType="textPassword"
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password"
                android:textColor="#FFF"
                android:textColorHint="#FFF"/>

        </com.wrapp.floatlabelededittext.FloatLabeledEditText>
        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:inputType="textPassword"
                android:id="@+id/passwordagain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/PasswordAgain"
                android:textColor="#FFF"
                android:textColorHint="#FFF"/>

        </com.wrapp.floatlabelededittext.FloatLabeledEditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:paddingBottom="30dp">

        <TextView
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/signin_background"
            android:gravity="center"
            android:text="@string/SignUp"
            android:textColor="#FFF"
            android:textSize="18sp" />
        </LinearLayout>
</LinearLayout>
